ligth/dark mode wip & minor fixes

--- a/app/App.module.css
+++ b/app/App.module.css
@@ -5,9 +5,10 @@
   
 .layout {
   display: flex; /* Flex container for the whole page */
+  text-align: center;
 }
 
-.grid_container {
+.content_container {
   width: 100%;
   display: flex;
   justify-content: top;
@@ -17,13 +18,27 @@
 }
 
 .container {
-  flex: 1;
   display: flex;
-  width: 100%;
+  width: 110px;
   height: 100%;
+  justify-content: center;
   flex-direction: row;
   padding: 5px;
-  gap: 10px;
-    
+  gap: 10px; 
+}
+
+.h1 {
+  display: flex;
+  color: #dfdfdf;
+  text-align: center;
+  margin-bottom: 20px;
+} 
+
+.h2 {
+  display: flex;
+  color: #dfdfdf;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
