--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #9794ff;
+  --foreground: #000000;
+  --secondary: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #38255a;
+    --foreground: #000000;
+    --secondary: #a5a5a5;
   }
 }
 
@@ -18,6 +20,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  text-wrap: balance;
 }
 
 @layer utilities {
@@ -27,14 +30,3 @@ body {
 }
 
   
-h1 {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-} 
-
-h2 {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
